syntax = "proto3";

option csharp_namespace = "Aggregator.Protos";

package banking;

service BankingService {
  rpc Withdraw (WithdrawRequest) returns (WithdrawResponse);
  rpc Deposit (DepositRequest) returns (DepositResponse);
  rpc Payment (PaymentRequest) returns (PaymentResponse);
  rpc ApproveTransaction (ApproveTransactionRequest) returns (ApproveTransactionResponse);
  rpc GetTransactionHistory (GetTransactionHistoryRequest) returns (GetTransactionHistoryResponse);
}

message WithdrawRequest {
  string customer_id = 1;
  double amount = 2;
  string description = 3;
}

message WithdrawResponse {
  string transaction_id = 1;
}

message DepositRequest {
  string customer_id = 1;
  double amount = 2;
  string description = 3;
}

message DepositResponse {
  string transaction_id = 1;
}

message PaymentRequest {
  string customer_id = 1;
  double amount = 2;
  string porter_id = 3;
  string host_id = 4;
  string description = 5;
}

message PaymentResponse {
  string transaction_id = 1;
}

message ApproveTransactionRequest {
  string transaction_id = 1;
  string admin_id = 2;
}

message ApproveTransactionResponse {
  bool success = 1;
}

message GetTransactionHistoryRequest {
  string customer_id = 1;
  string from_date = 2;
  string to_date = 3;
  int32 page = 4;
  int32 page_size = 5;
}

message TransactionDto {
  string id = 1;
  double amount = 2;
  string type = 3;
  string status = 4;
  string created_at = 5;
  string completed_at = 6;
  string description = 7;
  string porter_id = 8;
  string host_id = 9;
}

message GetTransactionHistoryResponse {
  repeated TransactionDto transactions = 1;
} 